MFC: Skip %pN in ncurses capability strings.

PR:		15418